Scrollbar color fix

--- a/src/Styles/TlcClientProfitability.css
+++ b/src/Styles/TlcClientProfitability.css
@@ -264,17 +264,17 @@
 }
 
 .page-containersss::-webkit-scrollbar-thumb {
-  background: linear-gradient(45deg, #6b5b95, #d64d4d);
+  background: linear-gradient(45deg, #6c4cdc, #d64d4d);
   border-radius: 10px;
   border: 3px solid #f1f1f1;
 }
 
 .page-containersss::-webkit-scrollbar-thumb:hover {
-  background: linear-gradient(45deg, #d64d4d, #6b5b95);
+  background: linear-gradient(45deg, #6c4cdc, #6b5b95);
 }
 
 /* Firefox */
 .page-containersss {
-  scrollbar-width: thin;
-  scrollbar-color: #6b5b95 #f1f1f1;
+  /* scrollbar-width: thin; */
+  scrollbar-color: #6c4cdc;
 }
